# Summer-2019

./: README.md
assignments/HW0/: README.md  linux-hints.md
assignments/HW0/src/: Greeting.hs
assignments/HW1/: README.md  hw.cabal
assignments/HW1/src/: Hw.hs  HwHint.hs
assignments/HW1/tests/: Main.hs
assignments/HW2/: .gitignore  README.md  hw.cabal
assignments/HW2/src/: BareBonesAgain.hs  HigherOrderProblems.hs  Lang0.hs  Lang1.hs  Lang2.hs  Lang3.hs  Lang4.hs  Map.hs  MapHints.hs  TypeProblems.hs
assignments/HW2/tests/: BareBonesAgainTest.hs  HigherOrderTest.hs  Lang0Test.hs  Lang1Test.hs  Lang2Test.hs  Lang3Test.hs  Lang4Test.hs  Main.hs  MapTest.hs  TestBase.hs  TypeProblemsTest.hs
assignments/HW2/tests/old tests/: LangTest.hs  ListTests.hs  MapTest.hs  OrderingTests.hs  SetTests.hs
assignments/HW3/: README.md  hw.cabal
assignments/HW3/src/: BareBonesLast.hs  Reader.hs  State.hs  TypeclassProblems.hs
assignments/HW3/src/hints/: Lang1ParserHint.hs  Lang2Hint.hs  Lang2ParserHint.hs  Lang3Hint.hs  Lang4Hint.hs  ReaderHint.hs  StateHint.hs  TypeclassProblemsHints.hs
assignments/HW3/src/lang/: HelpShow.hs  Lang2.hs  Lang3.hs  Lang3Hint.hs  Lang4.hs  Lang4Hint.hs
assignments/HW3/src/parser/: Lang0Parser.hs  Lang2Parser.hs  Lang3Parser.hs  Lang4Parser.hs  ParserMonad.hs
assignments/HW3/test/: Main.hs  ReaderTestType.hs  TypeclassProblemsTest.hs
assignments/HW3/test/BareBonesLast/: BareBonesLastTestBase.hs  EqTest.hs  FunctorTest.hs  MonadTest.hs  MonadTestType.hs  OrdTest.hs
assignments/HW3/test/lang/: Lang0Test.hs  Lang1Test.hs  Lang1TestTypes.hs  Lang2Test.hs  Lang3Test.hs  Lang4Test.hs  Lang4TestTypes.hs
assignments/HW3/test/parser/: Parser2Test.hs  Parser3Test.hs  Parser4Test.hs
assignments/HW3/tests/: Lang3Test.hs  Lang4Test.hs  Main.hs
assignments/HW3/tests/review tests/New folder/tests/: ExampleTest.hs  LangTest.hs  Main.hs  OrdTest.hs  TestBase.hs
assignments/HW3/tests/review tests/tests/: Lang1Test.hs  Lang1TestTypes.hs  Lang2Test.hs
assignments/HW3/tests/review tests/tests/tests/: LangTest1.hs  LangTest2.hs  LangTest3.hs  LangTest4.hs  TestBase.hs
assignments/HW4/: README.md  hw.cabal
assignments/HW4/src/: EnvUnsafe.hs  Lang.hs  LangHint.hs  ParserMonad.hs
assignments/HW4/tests/: LangEvalTest.hs  LangParserTest.hs  Main.hs  UsingLambdaCalcTest.hs
assignments/week1/: survey.md  week1.cabal
assignments/week1/tests/: Main.hs
assignments/week10/: README.md
assignments/week10/src/: EnvUnsafe.hs  HelpShow.hs  LangParser.hs  LangParserHint.hs
assignments/week10/tests/: EnvUnsafeTest.hs
assignments/week2/: hw.cabal
assignments/week2/src/: Hw.hs
assignments/week3/: README.md  hw.cabal
assignments/week3/src/: Hw02.hs  Set.hs
assignments/week3/tests/: IntTests.hs  Main.hs  StudentTests.hs  TestBase.hs
assignments/week4/src/: Lang1.hs  Lang4.hs  Map.hs  MapHints.hs
assignments/week4/tests/: TypeProblemsTest.hs
assignments/week5/: README.md  hw.cabal
assignments/week5/src/: BareBonesRevenge.hs  TypeclassProblems.hs  TypeclassProblemsHints.hs
assignments/week5/src/lang/: Lang2.hs  Lang3.hs
assignments/week5/src/parser/: Lang0Parser.hs  MyParserLib.hs
assignments/week5/tests/: EnumAndAllTheThingsTest.hs  EqTest.hs  FunctorTest.hs
assignments/week6/: README.md  hw.cabal
assignments/week6/src/: HardQuestion.hs
assignments/week6/src/lang/: Lang0.hs  Lang1.hs  Lang4.hs
assignments/week6/src/parser/: Example.hs  Lang0Parser.hs  Lang0ParserHard.hs  Lang1Parser.hs  Lang2Parser.hs  Lang3Parser.hs  Lang4Parser.hs  MyParserLib.hs
assignments/week6/tests/: Main.hs
assignments/week7/: README.md  hw.cabal
assignments/week7/src/: BareBonesLast.hs  ExamplesEasyTestCases.hs  PrinterMonad.hs
assignments/week7/src/lang/: Lang0.hs  Lang1.hs  Lang2.hs  Lang2Hint.hs  Lang3.hs  Lang4.hs
assignments/week7/src/parser/: Lang0Parser.hs  Lang1Parser.hs  Lang2Parser.hs  Lang3Parser.hs  Lang4Parser.hs  ParserMonad.hs
assignments/week7/tests/: Lang2TestTypes.hs  Main.hs  MonadTest.hs  MonadTestType.hs
assignments/week8/: week8.cabal
assignments/week8/src/: Bank.hs  PrinterMonad.hs  ReaderTest.hs  State.hs  StateTest.hs
assignments/week8/src/lang/: Lang0.hs  Lang1.hs  Lang4.hs
assignments/week8/src/parser/: Lang0Parser.hs  Lang0ParserFast.hs  Lang1Parser.hs  ParserMonad.hs
assignments/week8/tests/: Lang0Test.hs  Lang2TestTypes.hs  Lang3TestTypes.hs  Main.hs  Parser1Test.hs  Parser3Test.hs  Parser4Test.hs  ReaderTest.hs  StateTest.hs  StateTestType.hs
assignments/week9/: README.md  hw.cabal
assignments/week9/src/: HelpShow.hs  LambdaCalcImplementation.hs  LambdaCalcParser.hs  ParserMonad.hs  UsingLambdaCalc.hs
assignments/week9/src/hints/: CaptureAvoiding.hs  HigherOrderAbstractSyntax.hs  readme.md
assignments/week9/tests/: EqTest.hs  EvalTest.hs  Examples.hs  FreeVarsTest.hs  GeneratorExample.hs  HelpShow.hs  IsClosedTest.hs  IsValueTest.hs  LambdaTestTypes.hs  Main.hs  ParseTest.hs  TestShowTermType.hs  UsingLambdaCalcTest.hs
notes/proof/: Proof.agda  ProofScratch.agda  ProofScratch.agdai  README.md  proof.py
project/: INSTRUCTIONS.md  README.md  project.cabal
project/src/: Ast.hs  Check.hs  Eval.hs  Exec.hs  Parser.hs  ParserMonad.hs
project/tests/: CheckTest.hs  EvalTest.hs  Main.hs  ParserTest.hs
