name:                 week5
version:              0.1.0.0
synopsis:
homepage:
author:               Mark
maintainer:           lemay@bu.edu
category:
build-type:           Simple
cabal-version:        >=1.10


library
  exposed-modules:    MyParserLib, BareBonesRevenge, TypeclassProblems, Lang0Parser, Lang1Parser, Lang2Parser, Lang3Parser, Lang4Parser, Lang0, Lang1, Lang2, Lang3, Lang4
  ghc-options:        -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  build-depends:      containers, base >= 4.7 && < 5
  hs-source-dirs:     src, src/lang, src/parser
  default-language:   Haskell2010

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is: Main.hs
  other-modules:
    EnumAndAllTheThingsTest, EqTest, FunctorTest, LangTest, OrdTest, TestBase, ExampleTest
  build-depends:
      containers, base >= 4.7 && < 5
    , tasty >= 0.7, tasty-hunit, tasty-quickcheck, generic-arbitrary
    , week5